# vrchat-avatar-tools

./: .env  .eslintrc.json  .gitignore  README.md  bun.lockb  events.md  package.json  tailwind.config.ts  tsconfig.json
.git-hooks/: pre-commit
scripts/: build.ps1  dev.ps1  env.ts  gen-update-info.ts  keygen.ps1  newkey.ps1  pk.ps1  push.ts  ver.ts
scripts/lib/: files.ts  path.ts  updater.ts  version.ts
src/: routes.ts  state.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  constants.rs  cookies.rs  err.rs  files.rs  lib.rs  store.rs  tray.rs  whitelist.rs
src-tauri/src/cmd/: auth.rs  avatar.rs  file.rs  mod.rs
src-tauri/src/cmd/file/: create.rs  delete.rs  download.rs  mod.rs  query.rs  upload.rs
src-tauri/src/stores/: cookies.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/avatars/: page.tsx
src/app/login/: page.tsx
src/app/public-check/: page.tsx
src/app/settings/: page.tsx
src/app/update/: page.tsx
src/app/user-avatars/: page.tsx
src/components/: client-only.tsx  confirm-dialog.tsx  easy-tooltip.tsx  page-header.tsx  split-button.tsx  status-dot.tsx  theme-toggle.tsx  tooltip.tsx  updater.tsx
src/components/avatar/: avatar-grid.tsx  avatar-input.tsx  avatar-list-desktop.tsx  avatar-list-mobile.tsx  tag-selector.tsx
src/components/avatars/: user-selector.tsx
src/components/navigation/: nav-bar.tsx  page-link.tsx
src/components/public-check/: avatar-export.tsx  avatar-grid.tsx  avatar-import.tsx  avatar-input.tsx  tag-selector.tsx
src/components/settings/: auto-start.tsx  avatar-export.tsx  avatar-import.tsx  notification-toggle.tsx  theme-toggle.tsx  update-button.tsx
src/components/ui/: combobox.tsx  dialog.tsx  toast.tsx  toaster.tsx
src/components/user-avatars/: avatar-card.tsx  user-selector.tsx
src/hooks/: use-app-init.ts  use-auth.ts  use-avatar-fetcher.ts  use-avatars.ts  use-connectivity-check.ts  use-notifications.ts  use-path.ts  use-routes.ts  useAppInit.ts  useAppUpdater.ts  useAuth.ts  useAvatarFetcher.ts  useAvatars.ts
src/hooks/app/: use-app-init.ts  use-app-updater.ts  use-auth.ts  use-connectivity-check.ts  use-notifications.ts  use-routes.ts
src/hooks/avatars/: use-avatar-info-fetcher.ts  use-avatars.ts  use-user-avatars.ts
src/lib/: api.ts  aptabase.ts  err.ts  file.ts  update.ts  utils.ts
src/lib/api/: _base.ts  _err.ts  auth.ts  avatar.ts  base.ts  file.ts  index.ts
src/providers/: app-provider.tsx  app-providers.tsx  auth-provider.tsx  init-provider.tsx  notification-provider.tsx
src/state/: app.ts  auth.ts  avatars.ts  settings.ts
