[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-beta.0"
vrchatapi = "1.18.1"
thiserror = "1.0.63"
reqwest = { version = "0.12.7", features = ["cookies"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest_cookie_store = "0.8.0"
tauri-plugin-notification = "2.0.0-rc"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc"
