cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "vrchat-avatar-tools"
version = "0.2.1"
description = "VRChat avatar tools"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[profile.dev]
incremental = true           # Compile your binary in smaller steps.
rustflags = ["-Zthreads=24"] # Better compile performance.

[profile.release]
codegen-units = 1                             # Allows LLVM to perform better optimization.
lto = true                                    # Enables link-time-optimizations.
opt-level = "s"                               # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                               # Higher performance by disabling panic handlers.
strip = true                                  # Ensures debug symbols are removed.
trim-paths = "all"                            # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=24"] # Better compile performance.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-store = "2.1.0"
tauri-plugin-shell = "2.0.2"
tauri-plugin-clipboard-manager = "2.0.2"
vrchatapi = "1.18.8"
thiserror = "1.0.69"
reqwest = { version = "0.12.9", features = ["cookies"] }
tokio = { version = "1.41.1", features = ["full"] }
reqwest_cookie_store = "0.8.0"
tauri-plugin-notification = "2.0.1"
tauri-plugin-process = "2.0.1"
tauri-plugin-prevent-default = "0.6.1"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", branch = "v2" }
bytes = "1.8.0"
tauri-plugin-fs = "2.0.3"
md5 = "0.7.0"
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.1"
tauri-plugin-single-instance = "2.0.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.1"
tauri-plugin-cli = "2.0.1"
tauri-plugin-updater = "2.0.2"
